--- a/TheWinnersPage/TheWinnersPage/packages.config
+++ b/TheWinnersPage/TheWinnersPage/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CompanyImages" version="1.0.0" targetFramework="net452" />
+  <package id="TrophyImages" version="1.0.0" targetFramework="net452" />
+  <package id="WinnerImages" version="1.0.1" targetFramework="net452" />
 </packages>
