--- a/TheWinnersPage/TheWinnersPage/TheWinnersPage.csproj
+++ b/TheWinnersPage/TheWinnersPage/TheWinnersPage.csproj
@@ -66,7 +66,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -81,7 +80,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="FirstPlace.jpg" />
+    <Content Include="Kyrie.jpg" />
+    <Content Include="Lebron.jpeg" />
     <Content Include="logo_kodision.png" />
+    <Content Include="Melo.jpg" />
+    <Content Include="SecondPlace.png" />
+    <Content Include="Steph.jpg" />
+    <Content Include="ThirdPlace.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
